--- a/.azure-pipelines/one-pipeline.yml
+++ b/.azure-pipelines/one-pipeline.yml
@@ -22,24 +22,22 @@ resources:
       endpoint: github.com_frasermolyneux
 
 stages: 
-- stage: Build
+- stage: build
   jobs:
   - template: jobs/bicep-lint-code.yml@ado-pipeline-templates
     parameters: 
-      jobName: 'BicepLinter'
+      jobName: 'bicep_linter'
       azureSubscription: 'spn-platform-monitoring-production'
 
   - template: templates/bicep-environment-validation.yml
     parameters:
-      dependsOn: [BicepLinter]
+      dependsOn: [bicep_linter]
       azureSubscription: 'spn-platform-monitoring-production'
       environment: 'platform-monitoring-Production'
-      environmentName: 'Prd'
-      environmentTag: 'prd'
+      environmentName: 'prd'
 
 - template: templates/deploy-environment.yml
   parameters:
     azureSubscription: 'spn-platform-monitoring-production'
     environment: 'platform-monitoring-Production'
-    environmentName: 'Prd'
-    environmentTag: 'prd'
+    environmentName: 'prd'
