--- a/.azure-pipelines/templates/deploy-environment.yml
+++ b/.azure-pipelines/templates/deploy-environment.yml
@@ -5,13 +5,11 @@ parameters:
   type: string
 - name: environmentName
   type: string
-- name: environmentTag
-  type: string
 
 stages:
-- stage: Deploy${{ parameters.environmentName }}
+- stage: deploy_${{ parameters.environmentName }}
   jobs:
-  - deployment: Deploy${{ parameters.environmentName }}PlatformBicep
+  - deployment: deploy_${{ parameters.environmentName }}_platform
     environment: ${{ parameters.environment }}
 
     workspace:
@@ -24,19 +22,19 @@ stages:
             - checkout: self
 
             - task: AzureCLI@2
-              displayName: Deploy${{ parameters.environmentName }}PlatformBicep
+              displayName: deploy_${{ parameters.environmentName }}_platform_bicep
               inputs:
                 azureSubscription: ${{ parameters.azureSubscription }}
                 scriptType: 'pscore'
                 scriptLocation: 'inlineScript'
                 addSpnToEnvironment: true
                 inlineScript: |
-                  $config = (Get-Content $(Build.sourcesDirectory)/params/platform.${{ parameters.environmentTag }}.json | ConvertFrom-Json)
+                  $config = (Get-Content ./params/platform.${{ parameters.environmentName }}.json | ConvertFrom-Json)
 
                   $deployPrincipalId = (az ad sp show --id $env:servicePrincipalId | ConvertFrom-Json).id
 
                   $deletedKeyVaults = az keyvault list-deleted --query '[].properties.vaultId' | ConvertFrom-Json
-                  $isDeleted = $deletedKeyVaults | where {$_ -match "rg-platform-monitoring-${{ parameters.environmentTag }}-$($config.parameters.parLocation.value)-$($config.parameters.parInstance.value)"}
+                  $isDeleted = $deletedKeyVaults | where {$_ -match "rg-platform-monitoring-${{ parameters.environmentName }}-$($config.parameters.parLocation.value)-$($config.parameters.parInstance.value)"}
 
                   $keyVaultCreateMode = "default"
                   if ($isDeleted -ne $null) {
@@ -48,7 +46,7 @@ stages:
                     --name 'platformMonitoring${{ parameters.environmentName }}' `
                     --template-file bicep/platform.bicep `
                     --location $config.parameters.parLocation.value `
-                    --parameters @params/platform.${{ parameters.environmentTag }}.json `
+                    --parameters @params/platform.${{ parameters.environmentName }}.json `
                       parKeyVaultCreateMode=$keyVaultCreateMode `
                       parDeployPrincipalId=$deployPrincipalId
 
@@ -76,4 +74,4 @@ stages:
                     --name 'servicesMonitoring${{ parameters.environmentName }}' `
                     --resource-group $resourceGroupName `
                     --template-file bicep/services.bicep `
-                    --parameters @params/services.${{ parameters.environmentTag }}.json
+                    --parameters @params/services.${{ parameters.environmentName }}.json
