--- a/.azure-pipelines/templates/deploy-environment.yml
+++ b/.azure-pipelines/templates/deploy-environment.yml
@@ -34,7 +34,7 @@ stages:
                   $deployPrincipalId = (az ad sp show --id $env:servicePrincipalId | ConvertFrom-Json).id
 
                   $deletedKeyVaults = az keyvault list-deleted --query '[].properties.vaultId' | ConvertFrom-Json
-                  $isDeleted = $deletedKeyVaults | where {$_ -match "rg-platform-monitoring-${{ parameters.environmentName }}-$($config.parameters.parLocation.value)-$($config.parameters.parInstance.value)"}
+                  $isDeleted = $deletedKeyVaults | where {$_ -match "rg-platform-monitoring-${{ parameters.environmentName }}-$($config.parameters.location.value)-$($config.parameters.instance.value)"}
 
                   $keyVaultCreateMode = "default"
                   if ($isDeleted -ne $null) {
@@ -45,10 +45,10 @@ stages:
                   az deployment sub create `
                     --name 'platformMonitoring${{ parameters.environmentName }}' `
                     --template-file bicep/platform.bicep `
-                    --location $config.parameters.parLocation.value `
+                    --location $config.parameters.location.value `
                     --parameters @params/platform.${{ parameters.environmentName }}.json `
-                      parKeyVaultCreateMode=$keyVaultCreateMode `
-                      parDeployPrincipalId=$deployPrincipalId
+                      keyVaultCreateMode=$keyVaultCreateMode `
+                      deployPrincipalId=$deployPrincipalId
 
   - deployment: deploy_${{ parameters.environmentName }}_services
     dependsOn: ['deploy_${{ parameters.environmentName }}_platform']
