--- a/.github/workflows/release-to-production.yml
+++ b/.github/workflows/release-to-production.yml
@@ -109,7 +109,7 @@ jobs:
   terraform-plan-and-apply-prd:
     environment: Production
     runs-on: ubuntu-latest
-    needs: [function-app-deploy-dev]
+    needs: [function-app-deploy-dev, terraform-subscriptions-plan-and-apply-dev]
 
     concurrency: # This is required to prevent multiple GitHub Actions invocations against stateful resources. e.g. Terraform state file / Database / Deployed Apps
       group: ${{ github.repository }}-prd
