--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
 
   - package-ecosystem: "terraform"
     assignees: ["frasermolyneux"]
-    directory: "/terraform"
+    directories: ["/terraform", "/terraform-sub"]
     schedule:
       interval: "daily"
 
