Add function app resource group parameter to deployment workflows

--- a/.github/workflows/pull-request-validation.yml
+++ b/.github/workflows/pull-request-validation.yml
@@ -111,6 +111,7 @@ jobs:
       with:
         function-app-artifact-name: "monitoring-func"
         function-app-name: ${{ matrix.func_app.name }}
+        function-app-resource-group: ${{ matrix.func_app.resource_group_name }}
         AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
         AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
         AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
