--- a/.github/workflows/pull-request-validation.yml
+++ b/.github/workflows/pull-request-validation.yml
@@ -11,28 +11,6 @@ permissions:
   contents: read # This is required for actions/checkout
 
 jobs:
-  dependency-review:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: "Checkout Repository"
-      uses: actions/checkout@v6
-
-    - name: "Dependency Review"
-      uses: actions/dependency-review-action@v4
-
-  dotnet-func-ci:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v6
-
-    - uses: frasermolyneux/actions/dotnet-func-ci@main
-      with:
-        dotnet-project: "monitoring-func"
-        dotnet-version: 9.0.x
-        src-folder: "src"
-
   terraform-plan-and-apply-dev:
     environment: Development
     runs-on: ubuntu-latest
@@ -56,7 +34,6 @@ jobs:
       shell: bash
       run: |
         cd terraform
-        echo "func_apps=$(terraform output -json func_apps)" >> $GITHUB_OUTPUT
         echo "subscriptions=$(terraform output -json subscriptions)" >> $GITHUB_OUTPUT
       env:
         ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
@@ -66,7 +43,6 @@ jobs:
         ARM_USE_OIDC: true
 
     outputs:
-      func_apps: ${{ steps.terraform-output.outputs.func_apps }}
       subscriptions: ${{ steps.terraform-output.outputs.subscriptions }}
 
   terraform-subscriptions-plan-and-apply-dev:
@@ -92,35 +68,11 @@ jobs:
         AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
         AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
-  function-app-deploy-dev:
-    environment: Development
-    runs-on: ubuntu-latest
-    needs: [dotnet-func-ci, terraform-plan-and-apply-dev]
-
-    strategy:
-      matrix:
-        func_app: ${{ fromJSON(needs.terraform-plan-and-apply-dev.outputs.func_apps) }}
-
-    concurrency: # This is required to prevent multiple GitHub Actions invocations against stateful resources. e.g. Terraform state file / Database / Deployed Apps
-      group: ${{ github.repository }}-dev
-
-    steps:
-    - uses: actions/checkout@v6
-
-    - uses: frasermolyneux/actions/deploy-function-app@main
-      with:
-        function-app-artifact-name: "monitoring-func"
-        function-app-name: ${{ matrix.func_app.name }}
-        function-app-resource-group: ${{ matrix.func_app.resource_group_name }}
-        AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
-        AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
-        AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-
   terraform-plan-prd:
     if: github.actor != 'dependabot[bot]' # dependabot context has no permissions to prod so skip this check
     environment: Production
     runs-on: ubuntu-latest
-    needs: [function-app-deploy-dev]
+    needs: [terraform-subscriptions-plan-and-apply-dev]
 
     concurrency: # This is required to prevent multiple GitHub Actions invocations against stateful resources. e.g. Terraform state file / Database / Deployed Apps
       group: ${{ github.repository }}-prd
