--- a/.github/workflows/release-to-production.yml
+++ b/.github/workflows/release-to-production.yml
@@ -16,18 +16,6 @@ concurrency: # This is required to prevent multiple runs of the same workflow fr
   group: ${{ github.workflow }}
 
 jobs:
-  dotnet-func-ci:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v6
-
-    - uses: frasermolyneux/actions/dotnet-func-ci@main
-      with:
-        dotnet-project: "monitoring-func"
-        dotnet-version: 9.0.x
-        src-folder: "src"
-
   terraform-plan-and-apply-dev:
     environment: Development
     runs-on: ubuntu-latest
@@ -51,7 +39,6 @@ jobs:
       shell: bash
       run: |
         cd terraform
-        echo "func_apps=$(terraform output -json func_apps)" >> $GITHUB_OUTPUT
         echo "subscriptions=$(terraform output -json subscriptions)" >> $GITHUB_OUTPUT
       env:
         ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
@@ -61,7 +48,6 @@ jobs:
         ARM_USE_OIDC: true
 
     outputs:
-      func_apps: ${{ steps.terraform-output.outputs.func_apps }}
       subscriptions: ${{ steps.terraform-output.outputs.subscriptions }}
 
   terraform-subscriptions-plan-and-apply-dev:
@@ -87,31 +73,10 @@ jobs:
         AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
         AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
-  function-app-deploy-dev:
-    environment: Development
-    runs-on: ubuntu-latest
-    needs: [dotnet-func-ci, terraform-plan-and-apply-dev]
-
-    strategy:
-      matrix:
-        func_app: ${{ fromJSON(needs.terraform-plan-and-apply-dev.outputs.func_apps) }}
-
-    steps:
-    - uses: actions/checkout@v6
-
-    - uses: frasermolyneux/actions/deploy-function-app@main
-      with:
-        function-app-artifact-name: "monitoring-func"
-        function-app-name: ${{ matrix.func_app.name }}
-        function-app-resource-group: ${{ matrix.func_app.resource_group_name }}
-        AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
-        AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
-        AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-
   terraform-plan-and-apply-prd:
     environment: Production
     runs-on: ubuntu-latest
-    needs: [function-app-deploy-dev, terraform-subscriptions-plan-and-apply-dev]
+    needs: [terraform-subscriptions-plan-and-apply-dev]
 
     concurrency: # This is required to prevent multiple GitHub Actions invocations against stateful resources. e.g. Terraform state file / Database / Deployed Apps
       group: ${{ github.repository }}-prd
@@ -132,7 +97,6 @@ jobs:
       shell: bash
       run: |
         cd terraform
-        echo "func_apps=$(terraform output -json func_apps)" >> $GITHUB_OUTPUT
         echo "subscriptions=$(terraform output -json subscriptions)" >> $GITHUB_OUTPUT
       env:
         ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
@@ -142,7 +106,6 @@ jobs:
         ARM_USE_OIDC: true
 
     outputs:
-      func_apps: ${{ steps.terraform-output.outputs.func_apps }}
       subscriptions: ${{ steps.terraform-output.outputs.subscriptions }}
 
   terraform-subscriptions-plan-and-apply-prd:
@@ -164,27 +127,6 @@ jobs:
         terraform-backend-file: "backends/prd.backend.hcl"
         backend-key: "${{ matrix.subscription.subscription_id }}-terraform.tfstate"
         terraform-additional-args: "-var 'subscription_name=${{ matrix.subscription.name }}' -var 'subscription_id=${{ matrix.subscription.subscription_id }}'"
-        AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
-        AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
-        AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-
-  function-app-deploy-prd:
-    environment: Production
-    runs-on: ubuntu-latest
-    needs: [dotnet-func-ci, terraform-plan-and-apply-prd]
-
-    strategy:
-      matrix:
-        func_app: ${{ fromJSON(needs.terraform-plan-and-apply-prd.outputs.func_apps) }}
-
-    steps:
-    - uses: actions/checkout@v6
-
-    - uses: frasermolyneux/actions/deploy-function-app@main
-      with:
-        function-app-artifact-name: "monitoring-func"
-        function-app-name: ${{ matrix.func_app.name }}
-        function-app-resource-group: ${{ matrix.func_app.resource_group_name }}
         AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
         AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
         AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
