Update workflow permissions to enhance security and remove 'read-all' access

--- a/.github/workflows/codequality.yml
+++ b/.github/workflows/codequality.yml
@@ -11,14 +11,14 @@ on:
       - main
     types: [opened, synchronize, reopened, ready_for_review]
 
-  
-permissions: read-all
+permissions: {}
 
 jobs:
   devops-secure-scanning:
     permissions:
       contents: read
       actions: read
+      id-token: write
       security-events: write
     uses: frasermolyneux/actions/.github/workflows/devops-secure-scanning.yml@main
 
