--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,16 +4,37 @@ updates:
     assignees: ["frasermolyneux"]
     directory: "/terraform"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "04:45"
+      timezone: "Etc/UTC"
+    groups:
+      terraform:
+        patterns:
+          - "*"
 
   - package-ecosystem: "terraform"
     assignees: ["frasermolyneux"]
     directory: "/terraform-sub"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "04:45"
+      timezone: "Etc/UTC"
+    groups:
+      terraform:
+        patterns:
+          - "*"
 
   - package-ecosystem: "github-actions"
     assignees: ["frasermolyneux"]
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "04:45"
+      timezone: "Etc/UTC"
+    groups:
+      github-actions:
+        patterns:
+          - "*"
