--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -9,7 +9,7 @@ on:
       - '.github/workflows/deploy-prd.yml'
   workflow_dispatch:
   schedule:
-    - cron: "0 3 * * 4"
+    - cron: "0 3 * * 5"
 
 permissions: {}
 
@@ -18,6 +18,7 @@ concurrency:
 
 jobs:
   terraform-plan-and-apply-dev:
+    if: github.event_name != 'schedule'
     permissions:
       contents: read
       id-token: write
@@ -51,6 +52,7 @@ jobs:
       subscriptions: ${{ steps.terraform-output.outputs.subscriptions }}
 
   terraform-subscriptions-plan-and-apply-dev:
+    if: github.event_name != 'schedule'
     permissions:
       contents: read
       id-token: write
@@ -75,6 +77,9 @@ jobs:
           AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
   terraform-plan-and-apply-prd:
+    if: |
+      !failure() && !cancelled() &&
+      (needs.terraform-subscriptions-plan-and-apply-dev.result == 'success' || github.event_name == 'schedule')
     permissions:
       contents: read
       id-token: write
