fix: add 'terraform-sub/**' path to deploy-prd workflow triggers

--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - 'terraform/**'
+      - 'terraform-sub/**'
       - '.github/workflows/deploy-prd.yml'
   workflow_dispatch:
   schedule:
